<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".ui.news.detail.NewsDetailActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/tramp"
            android:tint="@color/transparent"
            tools:ignore="UseAppTint" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_baseline_arrow_back"
            app:tint="@color/white" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_bookmark"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/white_house_text"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="Sept.26,2019    15:15 PM"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/white_house_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/eileen"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/activity_main_white_house"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/eileen"
            android:layout_width="56dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_rounded_button"
            android:src="@drawable/eileen_sullivan" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/eileen_text2"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/eileen"
            android:text="@string/eileen_text1"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/eileen_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="20dp"
            android:layout_toEndOf="@+id/eileen"
            android:text="@string/eileen_text2"
            android:textColor="#D6D6D6" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:background="@drawable/shape_circular"
            android:src="@drawable/ic_facebook"
            app:tint="@color/app_text_color_primary" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:background="@drawable/shape_circular"
            android:src="@drawable/ic_twitter"
            app:tint="@color/app_text_color_primary" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:background="@drawable/shape_circular"
            android:src="@drawable/ic_message"
            app:tint="@color/app_text_color_primary" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:background="@drawable/shape_circular"
            android:src="@drawable/ic_share2"
            app:tint="@color/app_text_color_primary" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="80dp"
            android:text="@string/activity_main_comment"
            android:textAllCaps="false"
            android:textColor="@color/app_text_color_primary"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:padding="16dp"
        android:text="@string/activity_main_news_text"
        android:textColor="#353535" />


</LinearLayout>